--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  padding: 0%;
+  margin: 0;
+  list-style: none;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+html, body{
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+}
