--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -14,6 +14,10 @@
     padding: 15px;
     margin-bottom: 10px;
 
+    &.selected{
+        border: 1px solid red;
+    }
+
     .brand-colors {
         display: flex;
 
