--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -6,36 +6,50 @@
         font-size: 18px;
         margin-bottom: 10px;
     }
-}
 
-.brand {
 
-    border-bottom: 1px solid gainsboro;
-    padding: 15px;
-    margin-bottom: 10px;
+    .brand {
 
-    &.selected{
-        border: 1px solid red;
-    }
+        border-bottom: 1px solid gainsboro;
+        padding: 15px;
+        margin-bottom: 10px;
 
-    .brand-colors {
-        display: flex;
-
-        span {
-            background: var(--bgColor);
-            padding: 10px;
-            margin: 3px;
-            height: 55px;
-            width: 70px;
-            justify-content: center;
-            align-items: center;
+        article {
             font-size: 18px;
-            text-align: center;
-            font-weight: 300;
-            color: var(--textColor);
-            text-indent: -9999px;
-            
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+
+        &-colors {
+            display: flex;
+
+
+            span {
+                background: var(--bgColor);
+                padding: 10px;
+                margin: 3px;
+                height: 55px;
+                width: 70px;
+                justify-content: center;
+                align-items: center;
+                font-size: 18px;
+                text-align: center;
+                font-weight: 300;
+                color: var(--textColor);
+                text-indent: -9999px;
+
+            }
+        }
+
+        &.selected {
+            border: 1px solid #ffafbd;
+
+            .brand-colors {
+                span {
+                    flex: 1;
+                    text-indent: 0;
+                }
+            }
         }
     }
-
 }
