--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -1,12 +1,6 @@
 .brands {
     padding: 15px 15px 0 15px;
 
-    article {
-        color: rgba(0, 0, 0, 0.795);
-        font-size: 18px;
-        margin-bottom: 10px;
-    }
-
 
     .brand {
 
@@ -26,18 +20,19 @@
 
             span {
                 background: var(--bgColor);
-                padding: 10px;
-                margin: 3px;
+                margin: 10px 10px 0 0;
+                padding: 5px 10px;
                 height: 55px;
                 width: 70px;
                 justify-content: center;
                 align-items: center;
+                display: inline-block;
                 font-size: 18px;
                 text-align: center;
                 font-weight: 300;
                 color: var(--textColor);
                 text-indent: -9999px;
-
+                cursor: pointer;
             }
         }
 
@@ -47,7 +42,8 @@
             .brand-colors {
                 span {
                     flex: 1;
-                    text-indent: 0;
+                    text-indent:1px;              
+                    display:inline-flex;
                 }
             }
         }
