--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -20,32 +20,39 @@
 
             span {
                 background: var(--bgColor);
-                margin: 10px 10px 0 0;
-                padding: 5px 10px;
-                height: 55px;
+                height: 40px;
                 width: 70px;
+                margin: 3px;
                 justify-content: center;
                 align-items: center;
-                display: inline-block;
                 font-size: 18px;
                 text-align: center;
-                font-weight: 300;
+                font-weight: 500;
                 color: var(--textColor);
                 text-indent: -9999px;
                 cursor: pointer;
-            }
-        }
 
-        &.selected {
-            border: 1px solid #ffafbd;
-
-            .brand-colors {
-                span {
-                    flex: 1;
-                    text-indent:1px;              
-                    display:inline-flex;
+                &:hover {
+                text-indent: -9999px;  
+                display: inline-flex;
                 }
             }
         }
-    }
-}
+        
+
+
+        &.selected {
+            border: 2.5px solid #ffafbd;
+
+            .brand-colors {
+                    span {
+                        flex: 2;
+                        text-indent: 1px;
+                        display: inline-flex;
+                    }
+                }
+            }
+       
+        
+    
+}}
