--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -2,12 +2,33 @@
 .content {
     flex: 1; //Sidebardan kalan tüm alanı kapsaması için verilen stil.
     overflow: auto;
-    .header{
+
+    .header {
         height: 55px;
         border-bottom: 1px solid gainsboro;
         display: flex;
         position: sticky;
-        top:0;
+        top: 0;
     }
+}
 
+.loading {
+    span {
+            border: 1px solid gainsboro;
+            padding: 15px;
+            margin-bottom: 10px;
+            color: aquamarine;
+            height: 40px;
+            width: 70px;
+            margin-left: 30px;
+            justify-content: center;
+            align-items: center;
+            font-size: 18px;
+            text-align: center;
+            font-weight: 500;
+            cursor: pointer;
+            display: inline-flex;
+            flex: 1;
+    }
+    
 }
