--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -3,8 +3,8 @@
 
 
     .brand {
-
-        border-bottom: 1px solid gainsboro;
+        
+        border: 1px solid gainsboro;
         padding: 15px;
         margin-bottom: 10px;
 
@@ -16,18 +16,18 @@
 
         &-colors {
             display: flex;
-
+            flex-wrap: wrap;
+            width: 100%;
 
             span {
                 background: var(--bgColor);
                 height: 40px;
                 width: 70px;
-                margin: 3px;
+                margin: 5px;
                 justify-content: center;
                 align-items: center;
-                font-size: 18px;
+                font-size: 16px;
                 text-align: center;
-                font-weight: 500;
                 color: var(--textColor);
                 text-indent: -9999px;
                 cursor: pointer;
@@ -35,6 +35,12 @@
                 &:hover {
                 text-indent: -9999px;  
                 display: inline-flex;
+
+                svg{
+                    width: 25px;
+                    height: 25px;
+                }
+
                 }
             }
         }
@@ -42,13 +48,28 @@
 
 
         &.selected {
-            border: 2.5px solid #ffafbd;
+            border: 2.5px solid #adaf;
+            padding: 15px;
+            margin-bottom: 10px;
+            width: 100%;
+            
+           
 
+    
             .brand-colors {
                     span {
-                        flex: 2;
+                        flex: 1;
                         text-indent: 1px;
-                        display: inline-flex;
+                        font-weight: 400;
+                        display: flex;
+                        height: 40px;
+                        width: 100%;
+                        padding: 8px;
+                        
+                        svg{
+                            width: 18px;
+                            height: 18px;
+                        }
                     }
                 }
             }
