--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -1,4 +1,3 @@
-
 .content {
     flex: 1; //Sidebardan kalan tüm alanı kapsaması için verilen stil.
     overflow: auto;
@@ -8,10 +7,10 @@
         border-bottom: 1px solid gainsboro;
         display: flex;
         position: sticky;
-        top: 0; 
+        top: 0px;
         background-color: #fff;
 
-        span{
+        span {
             color: #a09e9e;
         }
     }
@@ -19,21 +18,34 @@
 
 .loading {
     span {
-            border: 1px solid gainsboro;
-            padding: 15px;
-            margin-bottom: 10px;
-            color: aquamarine;
-            height: 40px;
-            width: 70px;
-            margin-left: 30px;
-            justify-content: center;
-            align-items: center;
-            font-size: 18px;
-            text-align: center;
-            font-weight: 500;
-            cursor: pointer;
-            display: inline-flex;
-            flex: 1;
+        border: 1px solid gainsboro;
+        padding: 15px;
+        margin-bottom: 10px;
+        color: aquamarine;
+        height: 40px;
+        width: 70px;
+        margin-left: 30px;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        text-align: center;
+        font-weight: 500;
+        cursor: pointer;
+        display: inline-flex;
+        flex: 1;
     }
-    
+
+}
+
+@media(max-width: 1000px) {
+
+    .content {
+        margin-left: 0px;
+
+        .header {
+            height: 10px;
+
+        }
+    }
+
 }
