--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-*{
+* {
   padding: 0%;
   margin: 0;
   list-style: none;
@@ -21,7 +21,8 @@ code {
   box-sizing: border-box;
 }
 
-html, body{
+html,
+body {
   height: 100%;
 }
 
