--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -45,6 +45,9 @@
         .header {
             height: 10px;
 
+            .download {
+                display: none;
+            }
         }
     }
 
